# wfetch

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix  package.nix
assets/: nixos_smooth.txt  preprocess.json
src/: cli.rs  colors.rs  lib.rs  logos.rs  main.rs  wallpaper.rs  xterm.rs
