[package]
name = "wfetch"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.41", features = ["derive", "string"] }
clap_complete = "4.5.55"
crossterm = "0.29.0"
dirs = "6.0.0"
fast_image_resize = { version = "5.2.0", features = ["image", "rayon"] }
image = "0.25.6"
nix = { version = "0.30.1", features = ["process"] }
rexiv2 = { version = "0.10.0", optional = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
signal-hook = "0.3.18"
sysinfo = "0.36.0"
xterm-query = "0.5.2"

[build-dependencies]
clap = { version = "4.5.41", features = ["derive", "string"] }
clap_complete = "4.5.55"
clap_mangen = "0.2.28"

[features]
default = ["nixos"]
nixos = []
iynaixos = ["rexiv2"]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
missing_errors_doc = { level = "allow", priority = 1 }
missing_panics_doc = { level = "allow", priority = 1 }
must_use_candidate = { level = "allow", priority = 1 }
nursery = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
option_if_let_else = { level = "allow", priority = 1 }
unwrap_used = "deny"

# faster image operations in dev
[profile.dev.package.image]
opt-level = 3

[profile.dev.package.fast_image_resize]
opt-level = 3

[profile.release]
strip = true
lto = true
